--- a/.config/dein/neovim.toml
+++ b/.config/dein/neovim.toml
@@ -9,15 +9,22 @@ hook_source = '''
 '''
 
 [[plugins]]
+repo = 'neomake/neomake'
+on_cmd = 'Neomake'
+
+[[plugins]]
 repo = 'Shougo/deol.nvim'
 on_cmd = 'Deol'
 
 # 補完 {{{
 
+[[plugins]] # Auto Close (括弧)
+repo = 'Shougo/neopairs.vim'
+
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
 if = 'has("python3")'
-depends = 'context_filetype'
+depends = ['context_filetype', 'neopairs']
 on_event = 'InsertEnter'
 hook_source = '''
 	" <TAB>: completion.
@@ -39,9 +46,6 @@ hook_source = '''
 	let g:deoplete#enable_at_startup = 1
 	let g:deoplete#enable_ignore_case = 1
 	let g:deoplete#enable_smart_case = 1
-
-	" 補完するとき '(' をつけない
-	call deoplete#custom#set('_', 'converters', ['converter_remove_paren'])
 '''
 
 [[plugins]]
@@ -111,6 +115,10 @@ hook_post_source = '''
 		call denite#custom#var('grep', 'default_opts', ['--nogroup', '--nocolor', '--smart-case', '--hidden'])
 	endif
 
+	" Define alias
+	call denite#custom#alias('source', 'file_rec/git', 'file_rec')
+	call denite#custom#var('file_rec/git', 'command', ['git', 'ls-files', '-co', '--exclude-standard'])
+
 	" Change default prompt
 	call denite#custom#option('default', 'prompt', '>')
 '''
@@ -124,5 +132,12 @@ hook_post_source = '''
 	call denite#custom#source('file_rec', 'matchers', ['matcher_cpsm'])
 	call denite#custom#source('grep', 'matchers', ['matcher_ignore_globs', 'matcher_cpsm'])
 '''
+
+[[plugins]]
+repo = 'Jagua/vim-denite-ghq'
+if = 'executable("ghq")'
+depends = 'denite'
+on_cmd = 'DeniteGhq'
+on_source = 'denite'
 
 # }}}
