--- a/config/tmux/config.conf
+++ b/config/tmux/config.conf
@@ -37,7 +37,7 @@ set-option -g status-justify centre
 
 # 左側表示
 set-option -g status-left-length 90
-set-option -g status-left "tmux:#P | #(tmux show-options -g prefix) | CPU: #{cpu_icon} #{cpu_percentage}"
+set-option -g status-left "tmux:#P | #(tmux show-options -g prefix)"
 
 # 右側表示
 set-option -g status-right-length 90
@@ -95,15 +95,40 @@ bind - split-window -v
 bind | split-window -h
 
 # }}}
-# Tmux Plugin Manager {{{
-set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_CACHE_HOME/tmux/"
-set -g @plugin 'tmux-plugins/tpm'
+# COLOUR (Solarized dark) {{{
+# https://git.io/v1sPe
 
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @plugin 'tmux-plugins/tmux-cpu'
+# default statusbar colors
+set-option -g status-bg black #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr default
 
-# Plugin Seting
-set -g @colors-solarized '256'
+# default window title colors
+set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
 
-run '~/.cache/tmux/tpm/tpm'
+# active window title colors
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg black #base02
+set-option -g pane-active-border-fg brightgreen #base01
+
+# message text
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
+
+# bell
+set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+
 # }}}
