--- a/config/tmux/config.conf
+++ b/config/tmux/config.conf
@@ -132,3 +132,4 @@ set-window-option -g clock-mode-colour green #green
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
 # }}}
+# vim:ft=tmux:
