--- a/config/git/config
+++ b/config/git/config
@@ -36,7 +36,7 @@
 	autocorrect = 1
 # サードパーティー
 [ghq]
-	root = ~/.dev/ghq
+	root = ~/.local/src
 [gpg]
 	program = /usr/local/bin/gpg
 # vim:ft=gitconfig:
