--- a/config/tmux/config.conf
+++ b/config/tmux/config.conf
@@ -1,31 +1,30 @@
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
-
-# Vi キーバインドに変更
-set-window-option -g mode-keys vi
-
+# set-option -g default-shell /bin/zsh
+# set-option -g default-command /bin/zsh
 set-option -s escape-time 10
+set-option -g default-terminal "screen-256color"
+set -ga terminal-overrides ",screen-256color:Tc"
+
+set-option -g prefix C-t
+bind-key C-t send-prefix
+unbind-key C-b
 
 # Keep the window's name fixed
 set-option -g allow-rename off
 
 # コンソールの表示名設定
-set-option -g set-titles on
-set-option -g set-titles-string "[tmux] #T @ #H"
+# set-option -g set-titles on
+# set-option -g set-titles-string "[tmux] #T @ #H"
 
-# マウス操作を有効にする
+# マウス操作
 set-option -g mouse on
 
-# ペイン・ウィンドウ {{{
-
-# ウィンドウ履歴の最大行数
+# ウィンドウ履歴
 set-option -g history-limit 10000
 
-# ウィンドウとペインの番号を1から開始する（デフォルト0）
+# ウィンドウとペインの番号を1から開始する
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
-# }}}
 # ステータスバー {{{
 
 # ステータスバーを上部に表示する
@@ -41,59 +40,58 @@ set-option -g status-left "tmux:#P | #(tmux show-options -g prefix)"
 
 # 右側表示
 set-option -g status-right-length 90
-set-option -g status-right "#[fg=white]#(wifi)#[default] | #(battery --tmux) | %m/%d(%a) %H:%M"
+set-option -g status-right "#(battery --tmux) #[fg=white]#(wifi)#[default] %m/%d(%a) %H:%M"
 
 # }}}
 # Keybindings {{{
 
-# Prefixキーを変更
-unbind-key C-b
-set-option -g prefix C-t
-bind-key C-t send-prefix
+# Vi キーバインドに変更
+set-window-option -g mode-keys vi
 
-# コピーモード
-# Prefix+v でコピーモード開始
+# vimのキーバインドでペインを移動する
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+# vimのキーバインドでペインをリサイズする
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
+
+# <Prefix>r: 設定ファイル リロード
+bind-key r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# <Prefix><Ctrl-h,h,h,h,...>; 連打できる
+bind-key -r C-h select-window -t :-
+# <Prefix><Ctrl-h/l>: ウィンドウ切り替え
+bind-key -r C-l select-window -t :+
+
+# <Prefix>-: ペイン 横分割
+bind-key - split-window -v
+# <Prefix>|: ペイン 縦分割
+bind-key | split-window -h
+
+# コピーモード {{{
+
+# <Prefix>v: コピーモード開始
 bind-key v copy-mode \; display "Copy mode!"
 bind-key -t vi-copy v begin-selection
 
-# Prefix+Enter/y でコピー
+# <Prefix><Enter/y>: コピー
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Prefix+p でペースト
-# クリップボードにも保存されているので Cmd-v でもペースト可能
+# <Prefix>p: ペースト
 bind-key p paste-buffer
 
 # スクロールアップするとコピーモードに入る
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind-key -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 # 最後までスクロールダウンするとコピーモードを抜ける
-bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind-key -n WheelDownPane select-pane -t= \; send-keys -M
 
-# vimのキーバインドでペインを移動する
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# vimのキーバインドでペインをリサイズする
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-#設定ファイルをリロードする
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# Prefix + Ctrl-h,h,h,h,...と連打できる
-bind-key -r C-h select-window -t :-
-# Prefix + Ctrl-h/l でウィンドウ切り替え
-bind-key -r C-l select-window -t :+
-
-# - でペインを横分割する
-bind - split-window -v
-# | でペインを縦分割する
-bind | split-window -h
-
+# }}}
 # }}}
 # COLOUR (Solarized dark) {{{
 # https://git.io/v1sPe
