--- a/config/dein/neovim.toml
+++ b/config/dein/neovim.toml
@@ -8,13 +8,19 @@ hook_source = '''
 	let g:go#build#autobuild = 1
 '''
 
-[[plugins]]
-repo = 'neomake/neomake'
-on_cmd = 'Neomake'
-
-[[plugins]]
+[[plugins]] # ターミナルモード拡張
 repo = 'Shougo/deol.nvim'
 on_cmd = 'Deol'
+
+[[plugins]] # 不明
+repo = 'Shougo/deorise.nvim'
+
+[[plugins]] # スニペット
+repo = 'Shougo/deoppet.nvim'
+
+[[plugins]]
+repo = 'Shougo/defx.nvim'
+depends = 'denite'
 
 # 補完 {{{
 
@@ -126,7 +132,8 @@ hook_post_source = '''
 [[plugins]]
 repo = 'nixprime/cpsm'
 if = 'has("python3")'
-build = 'PY3=ON ./install.sh'
+build = 'sh -c "PY3=ON ./install.sh"'
+# build = './install.sh'
 on_source = 'denite'
 hook_post_source = '''
 	call denite#custom#source('file_rec', 'matchers', ['matcher_cpsm'])
