--- a/i3/config
+++ b/i3/config
@@ -1,4 +1,5 @@
-# cheatsheet
+# use i3-gaps
+# cheatsheet {{{
 # <$mod+f> fullscreen
 # <$mod+Q> app kill
 # <$mod+R> i3 reload
@@ -15,6 +16,7 @@
 # <Mod4+Tab> change window
 # <$mod+s> run system
 # <$mod+Shift+Escape> next wallpaper
+# }}}
 
 set $mod Mod4
 floating_modifier $mod
