--- a/polybar/config
+++ b/polybar/config
@@ -52,8 +52,9 @@ font-0 = "Noto Sans:size=11;1"
 font-1 = "Cica:size=12;1"
 
 modules-left = i3
+;modules-left = powermenu i3
 modules-center = xwindow
-modules-right = pulseaudio wlan eth cpu memory date battery
+modules-right = pulseaudio wlan eth battery date
 
 tray-position = right
 tray-padding = 2
@@ -105,26 +106,6 @@ label-urgent = %index%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
-[module/cpu]
-type = internal/cpu
-interval = 2
-
-label = %percentage:2%%
-
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
-
-[module/memory]
-type = internal/memory
-interval = 2
-
-label = %percentage_used%%
-
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
-
 [module/wlan]
 type = internal/network
 interface = wlp2s0
@@ -165,22 +146,9 @@ format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume = <ramp-volume> <label-volume>
-label-volume = %percentage%%
-label-volume-foreground = ${root.foreground}
-
-label-muted = 🔇
-label-muted-foreground = #666
-
-ramp-volume-0 = 🔈
-ramp-volume-1 = 🔉
-ramp-volume-2 = 🔊
-
 [module/battery]
 type = internal/battery
+; ls -1 /sys/class/power_supply/
 battery = BAT0
 adapter = AC
 full-at = 98
@@ -206,12 +174,54 @@ ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 
+[module/pulseaudio]
+type = internal/pulseaudio
+format-volume = <ramp-volume>
+
+label-muted = 🔇
+label-muted-foreground = #666
+
+ramp-volume-0 = 🔈
+ramp-volume-1 = 🔉
+ramp-volume-2 = 🔊
+
+[module/powermenu]
+; TODO: 使いやすくする
+type = custom/menu
+
+expand-right = true
+
+format-spacing = 1
+
+label-open = 
+label-open-foreground = ${colors.secondary}
+label-close =  cancel
+label-close-foreground = ${colors.secondary}
+label-separator = |
+label-separator-foreground = ${colors.foreground-alt}
+
+menu-0-0 = reboot
+menu-0-0-exec = menu-open-1
+menu-0-1 = power off
+menu-0-1-exec = menu-open-2
+
+menu-1-0 = cancel
+menu-1-0-exec = menu-open-0
+menu-1-1 = reboot
+menu-1-1-exec = reboot
+
+menu-2-0 = power off
+menu-2-0-exec = poweroff
+menu-2-1 = cancel
+menu-2-1-exec = menu-open-0
+
 [settings]
 screenchange-reload = true
 ;compositing-background = xor
 ;compositing-background = screen
 ;compositing-foreground = source
 ;compositing-border = over
+;pseudo-transparency = false
 
 [global/wm]
 margin-top = 5
