--- a/polybar/config
+++ b/polybar/config
@@ -54,7 +54,7 @@ font-1 = "Cica:size=12;1"
 modules-left = i3
 ;modules-left = powermenu i3
 modules-center = xwindow
-modules-right = pulseaudio wlan eth battery date
+modules-right = wlan eth date battery pulseaudio
 
 tray-position = right
 tray-padding = 2
@@ -112,7 +112,6 @@ interface = wlp2s0
 interval = 3.0
 
 label-connected = %essid%
-format-connected-underline = #9f78e1
 format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 
@@ -124,7 +123,6 @@ interface = enp1s0f1
 interval = 3.0
 
 label-connected = %local_ip%
-format-connected-underline = #55aa55
 format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 
@@ -144,7 +142,6 @@ time-alt = %H:%M:%S
 
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
 
 [module/battery]
 type = internal/battery
