--- a/i3/config
+++ b/i3/config
@@ -195,7 +195,7 @@ new_window 1pixel
 font pango:Cica 8
 
 # autostart
-exec_always --no-startup-id "~/.config/polybar/launch.sh"
+exec_always --no-startup-id "~/.config/polybar/launch.sh bar1"
 exec_always --no-startup-id "feh --no-fehbg --randomize --bg-max ~/Pictures/wallpaper/"
 exec --no-startup-id dunst
 exec --no-startup-id nm-applet
