--- a/polybar/config
+++ b/polybar/config
@@ -71,6 +71,32 @@ tray-padding = 2
 cursor-click = pointer
 cursor-scroll = ns-resize
 
+[bar/bar1]
+width = 100%
+height = 25
+radius = 6.0
+fixed-center = false
+monitor = ${env:MONITOR:eDP1}
+background = ${colors.background}
+foreground = ${colors.foreground}
+line-size = 3
+line-color = #f00
+border-size = 4
+border-color = #00000000
+padding-left = 0
+padding-right = 2
+module-margin-left = 1
+module-margin-right = 2
+font-0 = "Noto Sans:size=11;1"
+font-1 = "Cica:size=12;1"
+modules-left = i3
+modules-center = xwindow
+modules-right = date battery pulseaudio
+tray-position = right
+tray-padding = 2
+cursor-click = pointer
+cursor-scroll = ns-resize
+
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
