--- a/polybar/config
+++ b/polybar/config
@@ -31,7 +31,7 @@ height = 25
 radius = 6.0
 fixed-center = false
 
-monitor = ${env:MONITOR:eDP1}
+;monitor = ${env:MONITOR:eDP1}
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -76,7 +76,7 @@ width = 100%
 height = 25
 radius = 6.0
 fixed-center = false
-monitor = ${env:MONITOR:eDP1}
+;monitor = ${env:MONITOR:eDP1}
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 3
