linux: i3wm -> sway
- xorg から wayland に変更
- 使用していないパッケージを削除 (gtk2, python2, ...)
- 利用してるライブラリをインストール (lib*)

--- a/rofi/config
+++ b/rofi/config
@@ -1,7 +1,7 @@
-rofi.theme: ~/.config/rofi/theme.rasi
+rofi.theme: Monokai.rasi
 
-rofi.sidebar-mode: true
-rofi.hide-scrollbar: true
+rofi.show-icons: true
+rofi.font: Cica 16
 
 rofi.modi: window,drun
 
