linux: waybar style update
https://github.com/swalladge/dotfiles/blob/9071e8122ba5933d5a24ad1d04f2d097159e9a0f/host-archpad/config/waybar/style.css

--- a/waybar/config
+++ b/waybar/config
@@ -4,7 +4,7 @@
     "height": 30,
     "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
     "modules-center": ["sway/window"],
-    "modules-right": ["tray", "backlight", "pulseaudio", "battery", "battery#bat2", "clock"],
+    "modules-right": ["network", "backlight", "pulseaudio", "battery", "battery#bat2", "clock", "tray"],
     // Modules configuration
     // "sway/workspaces": {
     //     "disable-scroll": true,
@@ -71,6 +71,14 @@
             "default": ["🔈", "🔉", "🔊"]
         },
         "on-click": "pavucontrol"
+    },
+    "network": {
+        // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "format-wifi": "{essid} ({signalStrength}%) ",
+        "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
+        "format-linked": "{ifname} (No IP) ",
+        "format-disconnected": "Disconnected ⚠",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "custom/media": {
         "format": "{icon} {}",
