--- a/git/config
+++ b/git/config
@@ -6,7 +6,7 @@
 	preloadindex = true
 [user]
 	name = Ress
-	email = git@x39.dev
+	email = 48500247+ress997@users.noreply.github.com
 [github]
 	user = ress997
 # ---
