--- a/git/config
+++ b/git/config
@@ -10,10 +10,6 @@
 	last = log -1 HEAD
 [color]
 	ui = true
-[credential]
-	#helper = osxkeychain
-	#helper = libsecret
-	#helper = store # $XDG_CONFIG_HOME/git/credentials
 [help]
 	autocorrect = 1
 [interactive]
@@ -34,7 +30,7 @@
 [delta]
 	hunk-header-style = omit
 	line-numbers = true
-	side-by-side = true
+	#side-by-side = true
 [ghq]
 	user = ress997
 	root = ~/.local/src
